<package>
  <name>depth_to_laser</name>
  <version>1.0.7</version>
  <description>depth_to_laser</description>
  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>

  <license>BSD</license>


  <author>Chad Rockey</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
